# nullmodels

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt
notebooks/: diff-ner.ipynb  ggplot.ipynb  hg_slopes.ipynb  notebook.ipynb  simulation.ipynb
notebooks/data/: mesilased.json  test_task.json
notebooks/diff-ner/: compose.yml  conf.py  diff-models.py  diff.py  run.sh  text.json  utils.py
nullmodel_precision_recall/: __init__.py  simulate.py
nullmodels/: __init__.py  comparison.py  diff_collect.py  diff_sample.py  diff_tag.py  diff_task.py  hoeffding.py  notebook.ipynb  precision_recall.py  relative.py  sampling.py  tmp.py
pr/: pr.py
workflows/labelstudio/: compose.yml  json_export.json  min_json_export.json  pgpass.dev
