[project]
name = "nullmodels"
version = "0.1.0"
description = "Nullmodel simulations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.1",
    "scipy>=1.15.1",
    "plotnine>=0.14.4",
]

[project.optional-dependencies]
jupyter = [
    "notebook>=7.3.2",
]

[project.urls]
source = "https://github.com/mart-mihkel/nullmodels"
